[package]
name = "futures-await-quote"
version = "0.4.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Temporary fork of the `quote` crate for futures-await"
repository = "https://github.com/alexcrichton/futures-await-quote"

[dependencies]
proc-macro2 = "0.1"
